Sugati/src/objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Comm__c</fullName>
        <formula>I_Profit__c / I_Sell_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPT__c</fullName>
        <formula>I_Sell_Price__c /6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Booking_End_Date__c</fullName>
        <label>Booking End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_Booking_Start_Date__c</fullName>
        <label>Booking Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_Conf_End_Date__c</fullName>
        <label>Conf End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_Conf_start_Date__c</fullName>
        <label>Conf start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_Cost_Analysis_Code__c</fullName>
        <defaultValue>&quot;Insurance&quot;</defaultValue>
        <label>Cost Analysis Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Cost__c</fullName>
        <formula>I_Net_Rate__c + IPT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Net_Rate__c</fullName>
        <label>Net Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_No_of_Days__c</fullName>
        <label>No. of  Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Profit__c</fullName>
        <formula>I_Sell_Price__c - I_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Rev_Analysis_code__c</fullName>
        <defaultValue>&quot;Insurance&quot;</defaultValue>
        <label>Rev Analysis code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_in_Online_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this item will be available to clients making an online booking.</inlineHelpText>
        <label>Show in Online Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>I_Conf_start_Date__c</columns>
        <columns>I_Conf_End_Date__c</columns>
        <columns>I_No_of_Days__c</columns>
        <columns>I_Sell_Price__c</columns>
        <columns>I_Profit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>